--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,6 +5,11 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: login
+            
         users_in_memory: { memory: null }
     firewalls:
         dev:
@@ -13,6 +18,11 @@ security:
         main:
             lazy: true
             provider: users_in_memory
+            custom_authenticator: App\Security\LoginFormAuthentificationAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
